AI/kubeflow/1_Installation/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
  namespace: kubeflow
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*"
      port:
        name: http
        number: 80
        protocol: HTTP
      # Upgrade HTTP to HTTPS
      tls:
        httpsRedirect: true
    - hosts:
        - "*"
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: kubeflow-ingressgateway-certs
    - hosts:
        - "*"
      port:
        name: https
        number: 8888
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: kubeflow-ingressgateway-certs
